# Swarm-control-in-sc2bot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  5.9.0  ANALYSIS_REBUTTAL.md  ARCHITECTURE_DISTRIBUTION_ANALYSIS.md  ARENA_DEPLOYMENT_GUIDE.md  ARENA_VALIDATION_GUIDE.md  Add_Jarvis_to_Startup.bat  BUG_ERROR_LOG.md  BUILD_ORDER_EXECUTION_FIX.md  BUILD_ORDER_IMPROVEMENT.md  CACHE_CLEAR_INSTRUCTIONS.md  CHANGELOG.md  CI_FAILURE_ANALYSIS_SUMMARY.md  CI_SETUP_COMPLETE.md  CLEAR_CACHE_FIX.md  CODEX_PROMPT.md  CODE_IMPLEMENTATION_STATUS.md  COMPLETE_SYSTEM_IMPLEMENTATION.md  CONTINUOUS_TEST_IMPROVEMENTS.md  CONTINUOUS_TRAINING_SETUP.md  CONTRIBUTING.md  CONTROL_FLOW_DIAGRAM.md  DEVOPS_KIT_SETUP.md  Dockerfile  Dockerfile.python  ENCODING_AND_STRATEGY_ANALYZER_FIX.md  ENV_SETUP.md  EXPANSION_OPTIMIZATION_REPORT.md  FILE_DEPENDENCIES.md  FINAL_EXECUTION_VERIFICATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_OPTIMIZATION_SUMMARY.md  GIT_HOOK_ERROR_COMPLETE_GUIDE.md  IMPROVEMENTS_LIST.md  IMPROVEMENTS_TODO_LIST.md  IMPROVEMENT_BACKLOG.md  IMPROVEMENT_BACKLOG_2026-05-03.md  IMPROVEMENT_BACKLOG_2026-05-10.md  (+321 more)
.claude/: settings.local.json
.githooks/: pre-commit
.github/: secret-patterns.txt
ab_testing/: __init__.py  bot_ab_test.py  sc2_ab_tester.py
abap_sap/: ZBOT_ECONOMY.abap
ada/: battle_sim.adb
ada2/: type_system.adb
agda_proofs/: tactic_invariants.agda
agent_chain/: __init__.py  sc2_agent_chain.py
agent_memory/: __init__.py  sc2_long_term_memory.py
agno_agents/: sc2_agno_crew.py
airflow_dags/: sc2_replay_pipeline.py  sc2_training_pipeline.py
airsim_drone/: __init__.py  sc2_airsim_swarm.py
alphastar_arch/: model_distill.py  sc2_transformer.py
ansible/: inventory.yml
ansible_advanced/: sc2_deploy.yml
ansible_playbooks/: sc2_deploy.yml
apache_config/: bot_api.conf
apl/: battle_sim.apl
argocd/: app-of-apps.yaml  sc2bot-app.yaml
argocd_gitops/: sc2bot-app.yaml
arrow_analytics/: sc2_columnar.py
assembly_x86/: bot_perf.asm
asyncapi/: sc2_events.yaml
ats_lang/: sc2_safe.dats
attention_policy/: __init__.py  sc2_attention_agent.py
autoconf/: configure.ac
autogen_agents/: sc2_multi_agent.py
autogpt_planner/: __init__.py  sc2_autogpt_planner.py
automl_strategy/: __init__.py  sc2_automl.py
aws_cdk/: sc2_cdk_stack.py
azure_bicep/: sc2_infra.bicep
bash2/: battle_sim.sh
bash_scripting/: bot_deploy.sh
basic/: retro_strategy.bas
bazel/: BUILD.bazel
bazel_build/: BUILD.bazel
beam_pipeline/: sc2_beam.py
befunge/: battle_sim.bf
benchmarks/: bot_benchmark.py
bentoml_service/: sc2_service.py
brainfuck/: battle_sim.bf
bytewax_stream/: sc2_dataflow.py
cadence_workflow/: sc2_cadence.py
camel_integration/: sc2_routes.java
canary_deploy/: __init__.py  sc2_canary_release.py
carbon_lang/: combat_sim.carbon
carla_sim/: __init__.py  sc2_carla_transfer.py
cert_manager/: sc2_certificates.yaml
chaos_engineering/: __init__.py  sc2_chaos_monkey.py
cilium_network/: sc2_network_policy.yaml
circuit_breaker/: __init__.py  sc2_circuit_breaker.py
cirq_quantum/: quantum_circuits.py
claude_api_coach/: __init__.py  sc2_claude_coach.py
cleanrl_training/: cleanrl_ppo.py
clickhouse_analytics/: sc2_analytics.sql
clojure3/: game_state.clj
cloudevents/: sc2_event_producer.py
cmake/: CMakeLists.txt
cmake_build/: CMakeLists.txt
cobol/: SC2AI.CBL
cobol2/: battle_report.cbl
cobol_legacy/: BOTDATA.cbl
code_gen_agent/: __init__.py  sc2_code_generator.py
comm_learning/: __init__.py  sc2_comm_agent.py
common_lisp/: battle_sim.lisp
conductor_workflow/: sc2_conductor.py
contract_testing/: __init__.py  sc2_contract_tester.py
coq_proofs/: strategy_correctness.v
coreml_deploy/: __init__.py  sc2_coreml_agent.py
cortex_config/: sc2_cortex.yaml
cost_analysis/: aws_cost_optimizer.py
cpp2/: main.cpp
cpp_accel/: pathfinding.hpp
cqrs_pattern/: __init__.py  sc2_cqrs.py
crewai_agents/: sc2_crew.py
crossplane/: sc2bot-infra.yaml
crypto_trading/: __init__.py  auto_trader.py  backtester.py  config.py  crypto_http_service.py  market_analyzer.py  portfolio_tracker.py  risk_manager.py  security.py  strategies.py  upbit_client.py  utils.py  ws_price_stream.py
crystal/: scout_optimizer.cr
crystal_advanced/: sc2_fiber.cr
csharp2/: BattleSim.cs
csharp3/: BattleSim.cs
csharp_dotnet/: BotEngine.cs
cuda_kernels/: combat_sim.cu
curriculum_rl/: __init__.py  sc2_curriculum_trainer.py
cython/: battle_sim.pyx
d/: game_ai.d
d_advanced/: sc2_ranges.d
dagster_pipeline/: sc2_assets.py
dapr_components/: sc2_dapr.yaml
dart/: gcs_dashboard.dart
dask_analytics/: sc2_replay_analysis.py
data/: intel_data.json
data_quality/: sc2_ge_suite.py
databricks_ml/: sc2_databricks.py
dbt_models/: mart_win_rates.sql  sc2_analytics.sql  schema.yml  stg_battles.sql
delta_lake/: sc2_delta.py
digital_twin/: __init__.py  sc2_digital_twin.py
distributed_rl/: impala_learner.py
docker/: Dockerfile.sc2bot
docker_compose/: docker-compose.yml
docker_compose_full/: docker-compose.yml
docs_gen/: generate_docs.py
dspy_programs/: sc2_strategy_program.py
duckdb_analytics/: sc2_replay_query.py
ebpf_observability/: __init__.py  sc2_ebpf_monitor.py
edgedb_schema/: sc2.esdl
elixir_nx/: bot_tensor.exs
envoy_proxy/: sc2_envoy.yaml
erlang/: game_ai.erl
erlang2/: game_ai.erl
erlang_otp/: sc2_supervisor.erl
esp32_iot/: __init__.py  sc2_esp32_monitor.py
event_sourcing/: __init__.py  events.py  sc2_event_store.py
external_dns/: sc2_externaldns.yaml
falco_rules/: sc2bot-security.yaml
fasthtml_ui/: sc2_dashboard.py
feast_features/: sc2_feature_repo.py
feature_flags/: __init__.py  sc2_feature_flags.py
feature_store/: __init__.py  sc2_features.py
federated_learn/: __init__.py  sc2_federated_trainer.py
flink_stream/: sc2_flink_job.py
forth/: battle_sim.fs
fortran/: sc2_simulation.f90
fortran2/: battle_sim.f90
fortran_hpc/: bot_matrix.f90
fsharp2/: DecisionEngine.fs
meson_build/: meson.build
rust_accel/: Cargo.toml
rust_accel/src/: lib.rs
지휘관bottoml/: pyproject.toml
(+2976 files in other folders)
