[package]
name = "swarm_rust_accel"
version = "0.2.0"
edition = "2021"

[lib]
name = "swarm_rust_accel"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
